# Analogue3DUtility

./: .gitattributes  .gitignore  LICENSE  MACOS.md  README.md  SIGNING.md  a3d.py  analogue3d_firmware_updater.py  eightbitdo_64_updater.py  labels.py  pyproject.toml  requirements.txt  saves.py  sdcard.py  ui.py
.github/workflows/: release.yml
analogue3d/: __init__.py  cli.py  config.py  controller.py  labels.py  saves.py  savestates.py  sdcard.py  selfupdate.py  ui.py  updates.py
assets/: make_banner.py
scripts/: macos-launch-helper.sh
